@@ -33,14 +33,6 @@ class VP6Encoder(feedcomponent.ParseLaunchComponent):
         if 'encoder-state' in properties:
             element.set_property('encoder-state', properties['encoder-state'])
         if 'bitrate' in properties:
-            # FIXME: see #2133 to follow up on why all these properties need
-            # to get set to get a better bitrate
-            element.set_property('bitrate-control', 'cbr')
-            element.set_property('drop-frames', 1)
-            element.set_property('keyframe-distance', 250)
-            element.set_property('spatial-resampling', 1)
-            element.set_property('low-resampling-watermark', 30)
-            element.set_property('high-resampling-watermark', 40)
             element.set_property('bitrate', int(properties['bitrate'] / 1000))
 
     def do_setup(self):
